# jupyter_micropython_kernel

./: .gitignore  LICENSE  Maixpy_demo.ipynb  README.md  asyncmodule.py  kernel.json  micropython_webserve.ipynb  micropythondemo.ipynb  pyproject.toml  setup.py
jupyter_micropython_kernel/: Dkernel.py  __init__.py  __main__.py  asyncmodule.py  deviceconnector.py  install.py  kernel.py  kernelold.py  pyboard.py
